[tool.poetry]
name = "pytest-asyncio-db-transactions"
version = "0.1.0"
description = ""
authors = ["Alex Shalynin <a.shalynin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gino = "^1.0.0"
databases = {version = "^0.3.2", extras = ["sqlite"]}
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
